--- a/src/Components/Form/Form.css
+++ b/src/Components/Form/Form.css
@@ -17,8 +17,8 @@ form.ServiceForm{
     border: 1px solid white;
     color: aliceblue;
     position: relative;
-    left: 25%;
-    bottom:10px;
+    
+    bottom:0;
     padding: .5rem .5rem;
     margin-bottom: 2rem;
     border-radius: 5px;
